# Linux-applications

./: .gitignore  README.md
Camera/: CMakeLists.txt  main.cpp  v4l2.cpp  v4l2.h
TCP/client_nolib/: CMakeLists.txt  demo_01_client.cpp
TCP/server_epoll_nolib/: CMakeLists.txt  demo_03_epoll_server.cpp
TCP/server_epoll_nolib/Object/: Object.cpp  Object.h
TCP/server_lib/: CMakeLists.txt  demo_04_libevent_client.cpp
TCP/server_nolib/: CMakeLists.txt  demo_02_server.cpp
TCP/tcp/: CMakeLists.txt  tcp.cpp  tcp.h
UDP/client_lib/: CMakeLists.txt  demo_03_libevent_client.cpp
UDP/client_nolib/: CMakeLists.txt  demo_01_client.cpp
UDP/server_nolib/: CMakeLists.txt  demo_03_server.cpp  test  test.cpp  test01  test01.cpp
UDP/udp/: CMakeLists.txt  udp.cpp  udp.h
develop/: CMakeLists.txt  HotPlug.cpp  HotPlug.h  main.cpp
drm/: CMakeLists.txt  app  main.c  main02.c
v4l2/: CMakeLists.txt  app  main.c  main02.c  main03.c  main04.c  main05.c
串口/: uart_async.c
串口/LIJU--hyxw/: LIJU--HYXW-X6.cpp
触摸屏/: CMakeLists.txt  touch-tslib.cpp
